# recon

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
assets/: demo.tape  (+1 more)
recon-core/: CLAUDE.md  README.md  pyproject.toml
recon-core/src/deploysquad_recon_core/: __init__.py  __main__.py  authoring_guides  cli_tools.py  context.py  embeddings.py  errors.py  index.py  links.py  mcp_server.py  schemas.py
recon-core/src/deploysquad_recon_core/models/: __init__.py  base.py  constraint.py  decision.py  epic.py  feature.py  goal.py  module.py  persona.py  project.py  user_story.py  version.py
recon-core/src/deploysquad_recon_core/vault/: __init__.py  paths.py  reader.py  writer.py
recon-core/tests/: conftest.py  run_fresh_install_test.sh  test_api.py  test_cli_tools.py  test_context.py  test_embeddings.py  test_index.py  test_integration_fresh.py  test_links.py  test_mcp_server.py
recon-core/tests/fixtures/sample_vault/my-project/: Project - My Project.md
recon-core/tests/fixtures/sample_vault/my-project/.graph/: index.json
recon-core/tests/fixtures/sample_vault/my-project/constraints/: Constraint - MIT License.md
recon-core/tests/fixtures/sample_vault/my-project/decisions/: Decision - Use JWT.md
recon-core/tests/fixtures/sample_vault/my-project/epics/: Epic - Authentication.md
recon-core/tests/fixtures/sample_vault/my-project/features/: Feature - JWT Login.md
recon-core/tests/fixtures/sample_vault/my-project/goals/: Goal - Fast Delivery.md
recon-core/tests/test_models/: test_base.py  test_constraint.py  test_decision.py  test_epic.py  test_feature.py  test_goal.py  test_module.py  test_persona.py  test_project.py  test_registry.py  test_user_story.py  test_version.py
recon-core/tests/test_vault/: test_paths.py  test_reader.py  test_writer.py
(+106 files in other folders)
